[gd_scene load_steps=24 format=2]

[ext_resource path="res://sprites/train/DrillMetods.png" type="Texture" id=1]
[ext_resource path="res://sprites/train/DrillClass.png" type="Texture" id=2]
[ext_resource path="res://sprites/train/ShielderClass.png" type="Texture" id=3]
[ext_resource path="res://sprites/train/ScanerClass.png" type="Texture" id=4]
[ext_resource path="res://sprites/train/ScanerMetods.png" type="Texture" id=5]
[ext_resource path="res://sprites/train/TrainClass.png" type="Texture" id=6]
[ext_resource path="res://sprites/train/ShielderMetods.png" type="Texture" id=7]
[ext_resource path="res://sprites/TileSets/Caves and rails/caves-rails-tileset-beta-1.0.png" type="Texture" id=8]
[ext_resource path="res://sprites/train/TrainMetods.png" type="Texture" id=9]
[ext_resource path="res://sprites/car/car.3.png" type="Texture" id=10]
[ext_resource path="res://sprites/car/car.1.png" type="Texture" id=11]
[ext_resource path="res://sprites/car/car.2.png" type="Texture" id=12]
[ext_resource path="res://scripts/Constructor/ButtonTrain.gd" type="Script" id=13]
[ext_resource path="res://sprites/Coco-Sharp-Bold-Italic-trial.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://scripts/Constructor/Buttons/DeleteTrain.gd" type="Script" id=15]
[ext_resource path="res://scripts/Constructor/Buttons/ScanerAdd.gd" type="Script" id=16]
[ext_resource path="res://scripts/Constructor/Buttons/StartButton.gd" type="Script" id=17]

[sub_resource type="TileSet" id=1]
1/name = "caves-rails-tileset-beta-1.0.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 160, 224 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "caves-rails-tileset-beta-1.0.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 160, 224 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "caves-rails-tileset-beta-1.0.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 160, 128, 64 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="CircleShape2D" id=4]
radius = 13.0

[sub_resource type="CircleShape2D" id=5]
radius = 15.0

[sub_resource type="CircleShape2D" id=2]
radius = 13.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 5
font_data = ExtResource( 14 )

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327690, 3, 65541, -327689, 3, 65540, -327688, 3, 65536, -327687, 3, 7, -327686, 3, 131077, -327685, 3, 2, -327684, 3, 131073, -327683, 3, 196610, -327682, 3, 5, -327681, 3, 3, -393216, 3, 65541, -393215, 3, 6, -393214, 3, 65540, -393213, 3, 196608, -393212, 3, 65536, -393211, 3, 196611, -393210, 3, 131078, -393209, 3, 196610, -393208, 3, 131079, -393207, 3, 2, -393206, 3, 6, -393205, 3, 131078, -393204, 3, 0, -393203, 3, 131077, -393202, 3, 131072, -393201, 3, 131074, -393200, 3, 65542, -393199, 3, 6, -393198, 3, 131072, -393197, 3, 196612, -393196, 3, 196615, -393195, 3, 0, -262154, 3, 196609, -262153, 3, 65542, -262152, 3, 196614, -262151, 3, 65537, -262150, 3, 0, -262149, 3, 65537, -262148, 3, 4, -262147, 3, 65538, -262146, 3, 196612, -262145, 3, 196614, -327680, 3, 131079, -327679, 3, 131076, -327678, 3, 196609, -327677, 3, 131074, -327676, 3, 196615, -327675, 3, 65543, -327674, 3, 65540, -327673, 3, 131074, -327672, 3, 5, -327671, 3, 4, -327670, 3, 196608, -327669, 3, 131072, -327668, 3, 131073, -327667, 3, 65539, -327666, 3, 196615, -327665, 3, 131073, -327664, 3, 196615, -327663, 3, 6, -327662, 3, 65542, -327661, 3, 131074, -327660, 3, 1, -327659, 3, 196615, -196618, 3, 65541, -196617, 3, 65536, -196616, 3, 131075, -196615, 3, 65537, -196614, 3, 65543, -196613, 3, 131077, -196612, 3, 7, -196611, 3, 65536, -196610, 3, 131079, -196609, 3, 0, -262144, 3, 131078, -262143, 3, 65542, -262142, 3, 196610, -262141, 3, 131074, -262140, 3, 131072, -262139, 3, 3, -262138, 3, 65542, -262137, 3, 2, -262136, 3, 131077, -262135, 3, 131076, -262134, 3, 196614, -262133, 3, 1, -262132, 3, 131073, -262131, 3, 1, -262130, 3, 6, -262129, 3, 196612, -262128, 3, 65542, -262127, 3, 131072, -262126, 3, 196611, -262125, 3, 4, -262124, 3, 65542, -262123, 3, 131073, -131082, 3, 196609, -131081, 3, 65540, -131080, 3, 4, -131079, 3, 196609, -131078, 3, 196612, -131077, 3, 131073, -131076, 3, 7, -131075, 3, 196609, -131074, 3, 6, -131073, 3, 196615, -196608, 3, 131073, -196607, 3, 196615, -196606, 3, 65542, -196605, 3, 4, -196604, 3, 65540, -196603, 3, 131078, -196602, 3, 131075, -196601, 3, 65543, -196600, 3, 65537, -196599, 3, 131079, -196598, 3, 65542, -196597, 3, 4, -196596, 3, 7, -196595, 3, 4, -196594, 3, 196614, -196593, 3, 131078, -196592, 3, 131072, -196591, 3, 131074, -196590, 3, 196611, -196589, 3, 131079, -196588, 3, 131072, -196587, 3, 131078, -65546, 3, 7, -65545, 3, 4, -65544, 3, 196612, -65543, 3, 131077, -65542, 3, 131072, -65541, 3, 196608, -65540, 3, 196615, -65539, 3, 65537, -65538, 3, 65536, -65537, 3, 196613, -131072, 3, 4, -131071, 3, 196608, -131070, 3, 65543, -131069, 3, 0, -131068, 3, 6, -131067, 3, 196610, -131066, 3, 196609, -131065, 3, 131079, -131064, 3, 5, -131063, 3, 65536, -131062, 3, 131077, -131061, 3, 131079, -131060, 3, 196608, -131059, 3, 196609, -131058, 3, 196611, -131057, 3, 0, -131056, 3, 65536, -131055, 3, 65537, -131054, 3, 7, -131053, 3, 5, -131052, 3, 131075, -131051, 3, 65542, -10, 3, 5, -9, 3, 3, -8, 3, 5, -7, 3, 0, -6, 3, 131077, -5, 3, 131077, -4, 3, 5, -3, 3, 2, -2, 3, 131078, -1, 3, 196612, -65536, 3, 7, -65535, 3, 196610, -65534, 3, 196615, -65533, 3, 131078, -65532, 3, 0, -65531, 3, 131072, -65530, 3, 1, -65529, 3, 131074, -65528, 3, 196615, -65527, 3, 196610, -65526, 3, 65543, -65525, 3, 65537, -65524, 3, 1, -65523, 3, 196615, -65522, 3, 131077, -65521, 3, 0, -65520, 3, 65542, -65519, 3, 65543, -65518, 3, 65539, -65517, 3, 131079, -65516, 3, 196609, -65515, 3, 5, 65526, 3, 65537, 65527, 3, 131072, 65528, 3, 196612, 65529, 3, 131077, 65530, 3, 2, 65531, 3, 65540, 65532, 3, 196609, 65533, 3, 196612, 65534, 3, 131074, 65535, 3, 196613, 0, 1, 655360, 1, 1, 655360, 2, 1, 655360, 3, 1, 655360, 4, 1, 655360, 5, 1, 655360, 6, 1, 655360, 7, 1, 655360, 8, 1, 655360, 9, 1, 655360, 10, 1, 655360, 11, 1, 655360, 12, 1, 655360, 13, 1, 655360, 14, 1, 655360, 15, 1, 655360, 16, 1, 655360, 17, 1, 655360, 18, 1, 655360, 19, 1, 655360, 20, 3, 0, 21, 3, 0, 131062, 3, 131072, 131063, 3, 3, 131064, 3, 196612, 131065, 3, 131078, 131066, 3, 65541, 131067, 3, 65540, 131068, 3, 65542, 131069, 3, 196610, 131070, 3, 1, 131071, 3, 1, 65536, 1, 655360, 65537, 1, 655366, 65538, 1, 655366, 65539, 1, 655366, 65540, 1, 655366, 65541, 1, 655366, 65542, 1, 655366, 65543, 1, 655366, 65544, 1, 655366, 65545, 1, 655366, 65546, 1, 655366, 65547, 1, 655366, 65548, 1, 655366, 65549, 1, 655366, 65550, 1, 655366, 65551, 1, 655366, 65552, 1, 655366, 65553, 1, 655366, 65554, 1, 655366, 65555, 1, 655360, 65556, 3, 0, 65557, 3, 0, 196598, 3, 5, 196599, 3, 2, 196600, 3, 131074, 196601, 3, 196608, 196602, 3, 131075, 196603, 3, 196609, 196604, 3, 196615, 196605, 3, 131074, 196606, 3, 131072, 196607, 3, 131074, 131072, 1, 655360, 131073, 1, 655366, 131074, 1, 655366, 131075, 1, 655366, 131076, 1, 655366, 131077, 1, 655366, 131078, 1, 655366, 131079, 1, 655366, 131080, 1, 655366, 131081, 1, 655366, 131082, 1, 655366, 131083, 1, 655366, 131084, 1, 655366, 131085, 1, 655366, 131086, 1, 655366, 131087, 1, 655366, 131088, 1, 655366, 131089, 1, 655366, 131090, 1, 655366, 131091, 1, 655360, 131092, 3, 0, 131093, 3, 0, 262134, 3, 196615, 262135, 3, 131072, 262136, 3, 4, 262137, 3, 131073, 262138, 3, 65543, 262139, 3, 1, 262140, 3, 131078, 262141, 3, 131076, 262142, 3, 3, 262143, 3, 0, 196608, 1, 655366, 196609, 1, 655366, 196610, 3, 196614, 196611, 3, 196608, 196612, 3, 131074, 196613, 3, 4, 196614, 3, 196614, 196615, 1, 655366, 196616, 1, 655366, 196617, 1, 655366, 196618, 1, 655366, 196619, 1, 655366, 196620, 1, 655366, 196621, 1, 655366, 196622, 3, 131076, 196623, 3, 3, 196624, 3, 65537, 196625, 1, 655366, 196626, 1, 655366, 196627, 1, 655360, 196628, 3, 0, 196629, 3, 0, 327670, 3, 0, 327671, 3, 2, 327672, 3, 65536, 327673, 3, 131072, 327674, 3, 196609, 327675, 3, 65537, 327676, 3, 131074, 327677, 3, 2, 327678, 3, 131076, 327679, 3, 196614, 262144, 1, 655360, 262145, 1, 655366, 262146, 3, 65543, 262147, 3, 131075, 262148, 3, 196615, 262149, 3, 196612, 262150, 3, 4, 262151, 3, 196609, 262152, 3, 0, 262153, 3, 65543, 262154, 3, 65537, 262155, 3, 196613, 262156, 3, 65543, 262157, 3, 65536, 262158, 3, 131073, 262159, 3, 7, 262160, 3, 5, 262161, 1, 655366, 262162, 1, 655366, 262163, 1, 655360, 262164, 3, 0, 262165, 3, 0, 393206, 3, 196613, 393207, 3, 65537, 393208, 3, 65539, 393209, 3, 1, 393210, 3, 5, 393211, 3, 2, 393212, 3, 196615, 393213, 3, 4, 393214, 3, 196615, 393215, 3, 196614, 327680, 1, 655360, 327681, 1, 655366, 327682, 3, 65536, 327683, 1, 655366, 327684, 1, 655366, 327685, 1, 655366, 327686, 1, 655366, 327687, 1, 655366, 327688, 1, 655366, 327689, 1, 655366, 327690, 3, 196612, 327691, 3, 131072, 327692, 1, 655366, 327693, 3, 65542, 327694, 3, 196614, 327695, 3, 65540, 327696, 3, 7, 327697, 1, 655366, 327698, 1, 655366, 327699, 1, 655360, 327700, 3, 0, 327701, 3, 0, 458742, 3, 4, 458743, 3, 131077, 458744, 3, 65538, 458745, 3, 65536, 458746, 3, 196608, 458747, 3, 131078, 458748, 3, 131073, 458749, 3, 7, 458750, 3, 1, 458751, 3, 196609, 393216, 1, 655360, 393217, 1, 655366, 393218, 3, 196614, 393219, 3, 131075, 393220, 3, 65542, 393221, 3, 4, 393222, 3, 131078, 393223, 3, 196613, 393224, 3, 65539, 393225, 3, 65539, 393226, 3, 196615, 393227, 3, 196611, 393228, 3, 3, 393229, 3, 196610, 393230, 3, 131075, 393231, 1, 655366, 393232, 1, 655366, 393233, 1, 655366, 393234, 1, 655366, 393235, 1, 655366, 393236, 3, 0, 393237, 3, 0, 524278, 3, 131078, 524279, 3, 131078, 524280, 3, 6, 524281, 3, 4, 524282, 3, 196611, 524283, 3, 196613, 524284, 3, 196615, 524285, 3, 196608, 524286, 3, 65543, 524287, 3, 6, 458752, 1, 655360, 458753, 1, 655366, 458754, 1, 655366, 458755, 1, 655366, 458756, 1, 655366, 458757, 1, 655366, 458758, 1, 655366, 458759, 3, 3, 458760, 3, 2, 458761, 3, 1, 458762, 3, 2, 458763, 3, 131078, 458764, 3, 196610, 458765, 1, 655366, 458766, 1, 655366, 458767, 1, 655366, 458768, 1, 655366, 458769, 1, 655366, 458770, 1, 655366, 458771, 1, 655360, 458772, 3, 0, 458773, 3, 0, 589814, 3, 4, 589815, 3, 3, 589816, 3, 196608, 589817, 3, 4, 589818, 3, 7, 589819, 3, 1, 589820, 3, 65541, 589821, 3, 131078, 589822, 3, 1, 589823, 3, 131078, 524288, 1, 655360, 524289, 1, 655366, 524290, 3, 65537, 524291, 3, 65540, 524292, 3, 131076, 524293, 3, 196613, 524294, 3, 196609, 524295, 3, 65537, 524296, 3, 65538, 524297, 3, 131074, 524298, 3, 196608, 524299, 3, 131077, 524300, 3, 196608, 524301, 3, 65543, 524302, 3, 65542, 524303, 3, 6, 524304, 3, 196608, 524305, 3, 196609, 524306, 3, 131079, 524307, 1, 655360, 524308, 3, 0, 524309, 3, 0, 655350, 3, 131078, 655351, 3, 2, 655352, 3, 196610, 655353, 3, 196615, 655354, 3, 6, 655355, 3, 131078, 655356, 3, 2, 655357, 3, 196608, 655358, 3, 1, 655359, 3, 65540, 589824, 1, 655360, 589825, 1, 655366, 589826, 1, 655366, 589827, 1, 655366, 589828, 1, 655366, 589829, 1, 655366, 589830, 1, 655366, 589831, 1, 655366, 589832, 1, 655366, 589833, 1, 655366, 589834, 1, 655366, 589835, 1, 655366, 589836, 1, 655366, 589837, 1, 655366, 589838, 1, 655366, 589839, 1, 655366, 589840, 1, 655366, 589841, 1, 655366, 589842, 1, 655366, 589843, 1, 655360, 589844, 3, 0, 589845, 3, 0, 720886, 3, 6, 720887, 3, 65537, 720888, 3, 196608, 720889, 3, 196613, 720890, 3, 196610, 720891, 3, 65543, 720892, 3, 4, 720893, 3, 65537, 720894, 3, 2, 720895, 3, 131072, 655360, 1, 655360, 655361, 1, 655360, 655362, 1, 655360, 655363, 1, 655360, 655364, 1, 655360, 655365, 1, 655360, 655366, 1, 655360, 655367, 1, 655360, 655368, 1, 655360, 655369, 1, 655360, 655370, 1, 655360, 655371, 1, 655360, 655372, 1, 655360, 655373, 1, 655360, 655374, 1, 655360, 655375, 1, 655360, 655376, 1, 655360, 655377, 1, 655360, 655378, 1, 655360, 655379, 1, 655360, 655380, 3, 0, 655381, 3, 0, 786422, 3, 65536, 786423, 3, 131079, 786424, 3, 0, 786425, 3, 3, 786426, 3, 196612, 786427, 3, 65536, 786428, 3, 131075, 786429, 3, 65542, 786430, 3, 196608, 786431, 3, 65541, 720896, 3, 131078, 720897, 3, 131077, 720898, 3, 7, 720899, 3, 5, 720900, 3, 7, 720901, 3, 196609, 720902, 3, 196610, 720903, 3, 7, 720904, 3, 131075, 720905, 3, 131072, 720906, 3, 131077, 720907, 3, 7, 720908, 3, 196608, 720909, 3, 196614, 720910, 3, 7, 720911, 3, 65538, 720912, 3, 65543, 720913, 3, 65540, 720914, 3, 3, 720915, 3, 131074, 720916, 3, 65542, 720917, 3, 196610, 851958, 3, 131073, 851959, 3, 196615, 851960, 3, 65538, 851961, 3, 196613, 851962, 3, 131077, 851963, 3, 65541, 851964, 3, 65540, 851965, 3, 6, 851966, 3, 131072, 851967, 3, 65542, 786432, 3, 6, 786433, 3, 65538, 786434, 3, 3, 786435, 3, 65543, 786436, 3, 196611, 786437, 3, 131079, 786438, 3, 131074, 786439, 3, 3, 786440, 3, 196609, 786441, 3, 65538, 786442, 3, 131076, 786443, 3, 196611, 786444, 3, 7, 786445, 3, 65538, 786446, 3, 65543, 786447, 3, 131072, 786448, 3, 6, 786449, 3, 131073, 786450, 3, 131077, 786451, 3, 131078, 786452, 3, 196614, 786453, 3, 65541, 917494, 3, 131072, 917495, 3, 0, 917496, 3, 196612, 917497, 3, 3, 917498, 3, 131073, 917499, 3, 196608, 917500, 3, 131075, 917501, 3, 196610, 917502, 3, 131077, 917503, 3, 65543, 851968, 3, 65536, 851969, 3, 7, 851970, 3, 196614, 851971, 3, 1, 851972, 3, 196612, 851973, 3, 131074, 851974, 3, 131076, 851975, 3, 65541, 851976, 3, 65543, 851977, 3, 196614, 851978, 3, 196611, 851979, 3, 131072, 851980, 3, 131079, 851981, 3, 196611, 851982, 3, 196612, 851983, 3, 6, 851984, 3, 131077, 851985, 3, 65542, 851986, 3, 65543, 851987, 3, 196609, 851988, 3, 7, 851989, 3, 3, 983030, 3, 131078, 983031, 3, 131075, 983032, 3, 5, 983033, 3, 65536, 983034, 3, 196608, 983035, 3, 131075, 983036, 3, 131077, 983037, 3, 65542, 983038, 3, 131077, 983039, 3, 196612, 917504, 3, 3, 917505, 3, 65543, 917506, 3, 2, 917507, 3, 131077, 917508, 3, 3, 917509, 3, 131073, 917510, 3, 65541, 917511, 3, 7, 917512, 3, 196615, 917513, 3, 3, 917514, 3, 65542, 917515, 3, 131073, 917516, 3, 196615, 917517, 3, 5, 917518, 3, 196614, 917519, 3, 196614, 917520, 3, 196611, 917521, 3, 65537, 917522, 3, 4, 917523, 3, 1, 917524, 3, 65538, 917525, 3, 5, 1048566, 3, 196615, 1048567, 3, 65539, 1048568, 3, 131079, 1048569, 3, 65539, 1048570, 3, 3, 1048571, 3, 196614, 1048572, 3, 3, 1048573, 3, 65539, 1048574, 3, 196612, 1048575, 3, 131072, 983040, 3, 196609, 983041, 3, 2, 983042, 3, 65538, 983043, 3, 4, 983044, 3, 4, 983045, 3, 3, 983046, 3, 131079, 983047, 3, 6, 983048, 3, 196610, 983049, 3, 7, 983050, 3, 65537, 983051, 3, 65540, 983052, 3, 196608, 983053, 3, 6, 983054, 3, 65537, 983055, 3, 131077, 983056, 3, 65537, 983057, 3, 6, 983058, 3, 5, 983059, 3, 65543, 983060, 3, 1, 983061, 3, 196608, 1114102, 3, 4, 1114103, 3, 7, 1114104, 3, 196611, 1114105, 3, 65542, 1114106, 3, 5, 1114107, 3, 65538, 1114108, 3, 65538, 1114109, 3, 65541, 1114110, 3, 196615, 1114111, 3, 3, 1048576, 3, 65539, 1048577, 3, 196611, 1048578, 3, 196608, 1048579, 3, 196614, 1048580, 3, 131075, 1048581, 3, 65536, 1048582, 3, 6, 1048583, 3, 5, 1048584, 3, 131073, 1048585, 3, 65542, 1048586, 3, 131077, 1048587, 3, 196612, 1048588, 3, 65539, 1048589, 3, 131072, 1048590, 3, 0, 1048591, 3, 4, 1048592, 3, 196608, 1048593, 3, 196610, 1048594, 3, 196612, 1048595, 3, 6, 1048596, 3, 2, 1048597, 3, 65542, 1179638, 3, 65537, 1179639, 3, 65538, 1179640, 3, 65540, 1179641, 3, 3, 1179642, 3, 65538, 1179643, 3, 5, 1179644, 3, 65539, 1179645, 3, 196610, 1179646, 3, 131074, 1179647, 3, 131079, 1114112, 3, 196613, 1114113, 3, 131072, 1114114, 3, 196608, 1114115, 3, 65536, 1114116, 3, 196610, 1114117, 3, 196615, 1114118, 3, 2, 1114119, 3, 196614, 1114120, 3, 6, 1114121, 3, 5, 1114122, 3, 65543, 1114123, 3, 131072, 1114124, 3, 3, 1114125, 3, 131072, 1114126, 3, 2, 1114127, 3, 131073, 1114128, 3, 131073, 1114129, 3, 65540, 1114130, 3, 65541, 1114131, 3, 65540, 1114132, 3, 131078, 1114133, 3, 131076, 1245174, 3, 4, 1245175, 3, 65543, 1245176, 3, 5, 1245177, 3, 4, 1245178, 3, 131074, 1245179, 3, 196612, 1245180, 3, 196608, 1245181, 3, 196609, 1245182, 3, 65538, 1245183, 3, 1, 1179648, 3, 3, 1179649, 3, 4, 1179650, 3, 2, 1179651, 3, 65542, 1179652, 3, 65537, 1179653, 3, 196613, 1179654, 3, 5, 1179655, 3, 4, 1179656, 3, 196614, 1179657, 3, 196615, 1179658, 3, 3, 1179659, 3, 196609, 1179660, 3, 7, 1179661, 3, 131074, 1179662, 3, 4, 1179663, 3, 5, 1179664, 3, 131074, 1179665, 3, 65540, 1179666, 3, 131077, 1179667, 3, 65540, 1179668, 3, 3, 1179669, 3, 196608, 1310709, 3, 65542, 1310710, 3, 131075, 1310711, 3, 1, 1310712, 3, 131072, 1310713, 3, 65536, 1310714, 3, 196613, 1310715, 3, 131074, 1310716, 3, 65543, 1310717, 3, 65542, 1310718, 3, 196614, 1310719, 3, 65536, 1245184, 3, 6, 1245185, 3, 65541, 1245186, 3, 196615, 1245187, 3, 196613, 1245188, 3, 196613, 1245189, 3, 65540, 1245190, 3, 65537, 1245191, 3, 196613, 1245192, 3, 1, 1245193, 3, 65539, 1245194, 3, 4, 1245195, 3, 0, 1245196, 3, 196613, 1245197, 3, 196608, 1245198, 3, 3, 1245199, 3, 131077, 1245200, 3, 196609, 1245201, 3, 4, 1245202, 3, 131074, 1245203, 3, 65538, 1245204, 3, 196613, 1245205, 3, 131075, 1376245, 3, 131078, 1376246, 3, 65542, 1376247, 3, 196609, 1376248, 3, 131072, 1376249, 3, 3, 1376250, 3, 65538, 1376251, 3, 7, 1376252, 3, 196609, 1376253, 3, 65539, 1376254, 3, 6, 1376255, 3, 131075, 1310720, 3, 1, 1310721, 3, 196614, 1310722, 3, 3, 1310723, 3, 196614, 1310724, 3, 196615, 1310725, 3, 131078, 1310726, 3, 131072, 1310727, 3, 2, 1310728, 3, 5, 1310729, 3, 65537, 1310730, 3, 65543, 1310731, 3, 131079, 1310732, 3, 196611, 1310733, 3, 131072, 1310734, 3, 131079, 1310735, 3, 1, 1310736, 3, 4, 1310737, 3, 131075, 1310738, 3, 4, 1310739, 3, 131072, 1310740, 3, 65537, 1310741, 3, 196612, 1441781, 3, 131074, 1441782, 3, 65541, 1441783, 3, 7, 1441784, 3, 7, 1441785, 3, 196611, 1441786, 3, 65542, 1441787, 3, 3, 1441788, 3, 131079, 1441789, 3, 65540, 1441790, 3, 1, 1441791, 3, 1, 1376256, 3, 196614, 1376257, 3, 65539, 1376258, 3, 0, 1376259, 3, 131075, 1376260, 3, 196608, 1376261, 3, 196608, 1376262, 3, 65542, 1376263, 3, 6, 1376264, 3, 65539, 1376265, 3, 65536, 1376266, 3, 7, 1376267, 3, 7, 1376268, 3, 196610, 1376269, 3, 131079, 1376270, 3, 196609, 1376271, 3, 196608, 1376272, 3, 65542, 1376273, 3, 0, 1376274, 3, 131076, 1376275, 3, 131077, 1376276, 3, 65541, 1376277, 3, 65541, 1507317, 3, 0, 1507318, 3, 196613, 1507319, 3, 196608, 1507320, 3, 131072, 1507321, 3, 65538, 1507322, 3, 65538, 1507323, 3, 65540, 1507324, 3, 65541, 1507325, 3, 4, 1507326, 3, 196613, 1507327, 3, 65543, 1441792, 3, 5, 1441793, 3, 65536, 1441794, 3, 1, 1441795, 3, 6, 1441796, 3, 3, 1441797, 3, 131076, 1441798, 3, 65542, 1441799, 3, 65538, 1441800, 3, 131078, 1441801, 3, 6, 1441802, 3, 65536, 1441803, 3, 196614, 1441804, 3, 5, 1441805, 3, 131072, 1441806, 3, 65539, 1441807, 3, 196613, 1441808, 3, 65541, 1441809, 3, 131074, 1441810, 3, 7, 1441811, 3, 65540, 1441812, 3, 65541, 1441813, 3, 6 )

[node name="Train_Move" type="Area2D" parent="."]
position = Vector2( -14, 27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Train_Move"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Train_Move/CollisionShape2D"]
texture = ExtResource( 9 )

[node name="Drill_Chop" type="Node2D" parent="."]
position = Vector2( -24, 129 )

[node name="Sprite" type="Sprite" parent="Drill_Chop"]
texture = ExtResource( 1 )

[node name="Shielder_Defend" type="Node2D" parent="."]
position = Vector2( -23, 193 )

[node name="Sprite" type="Sprite" parent="Shielder_Defend"]
texture = ExtResource( 7 )

[node name="Train_TreeToFuel" type="Node2D" parent="."]
position = Vector2( -54, 26 )

[node name="Sprite" type="Sprite" parent="Train_TreeToFuel"]
texture = ExtResource( 9 )

[node name="Train_VaultFuel" type="Node2D" parent="."]
position = Vector2( -100, 24 )

[node name="Sprite" type="Sprite" parent="Train_VaultFuel"]
texture = ExtResource( 9 )

[node name="Scaner_Scan" type="Node2D" parent="."]
position = Vector2( -17, 270 )

[node name="Sprite" type="Sprite" parent="Scaner_Scan"]
texture = ExtResource( 5 )

[node name="Scaner_GiveInfo" type="Node2D" parent="."]
position = Vector2( -75, 269 )

[node name="Sprite" type="Sprite" parent="Scaner_GiveInfo"]
texture = ExtResource( 5 )

[node name="Shielder_Recharge" type="Node2D" parent="."]
position = Vector2( -97, 191 )

[node name="Sprite" type="Sprite" parent="Shielder_Recharge"]
texture = ExtResource( 7 )

[node name="Shielder_VaultEnergy" type="Node2D" parent="."]
position = Vector2( -58, 192 )

[node name="Sprite" type="Sprite" parent="Shielder_VaultEnergy"]
texture = ExtResource( 7 )

[node name="Drill_Cooler" type="Node2D" parent="."]
position = Vector2( -82, 129 )

[node name="Sprite" type="Sprite" parent="Drill_Cooler"]
texture = ExtResource( 1 )

[node name="Train" type="Area2D" parent="."]
position = Vector2( -142, 27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Train"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Train/CollisionShape2D"]
texture = ExtResource( 6 )

[node name="Drill" type="Node2D" parent="."]
position = Vector2( -134, 129 )

[node name="Sprite" type="Sprite" parent="Drill"]
texture = ExtResource( 2 )

[node name="Shielder" type="Node2D" parent="."]
position = Vector2( -136, 193 )

[node name="Sprite" type="Sprite" parent="Shielder"]
texture = ExtResource( 3 )

[node name="Scaner" type="Node2D" parent="."]
position = Vector2( -132, 270 )

[node name="Sprite" type="Sprite" parent="Scaner"]
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 188, 114 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 0 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D/CollisionShape2D"]
position = Vector2( 0, -1 )
frames = SubResource( 3 )

[node name="Button2" type="Button" parent="."]
anchor_right = 1.0
margin_left = 178.0
margin_top = 12.0
margin_right = 190.0
margin_bottom = 32.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 1.0
margin_top = 139.0
margin_right = 41.0
margin_bottom = 179.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = -1.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 6 )
text = "Spawn
 Train"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_top = 20.0
margin_right = 12.0
margin_bottom = 40.0
action_mode = 0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control2"]
margin_left = 38.0
margin_top = 159.0
margin_right = 50.0
margin_bottom = 179.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
